[tool.poetry]
name = "lin-cms-flask"
version = "0.4"
description = "🎀A simple and practical CMS implememted by flask"
authors = ["sunlin92 <sun.melodies@gmail.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
Lin-CMS = "^0.4.11"
pillow = "^9.3.0"
flask-cors = "^3.0.10"
gunicorn = "^20.1.0"
gevent = "^21.12.0"
flask-socketio = "^5.1.1"
blinker = "^1.4"
python-dotenv = "^0.19.2"
gevent-websocket = "^0.10.1"
pydantic = {extras = ["email"], version = "^1.9.0"}
mypy = "^0.950"
Werkzeug = "2.1.2"

[tool.poetry.dev-dependencies]
flask-sqlacodegen = "^1.1.8"
black = "^22.3.0"
isort = "^5.10.1"
watchdog = "^2.1.6"
coverage = "^6.3.2"
pytest = "^6.2.5"
pre-commit = "^2.17.0"
pytest-ordering = "^0.6"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 120
use_parentheses = true
include_trailing_comma = true

[tool.black]
line_length = 120

[tool.mypy]
files = ["starter.py"]
ignore_missing_imports=true

[tool.pytest]
testpaths=["tests"]
